# AttendaTap

./: README.md
device/: Cargo.toml  README.md
device/src/: main.rs
